--- a/default.css
+++ b/default.css
@@ -1,7 +1,8 @@
 html, body {
 	height: 100%;
-	font-family: "Titillium";
+	font-family: "Titillium Web";
 }
+body.stop-scroll { overflow: visible; }
 #skeleton { z-index: -1; width: 100%; height: 100%; }
 #skeleton .section {
 	height: 100%;
@@ -33,6 +34,7 @@ html, body {
 	background: #FFF0C1;
 	z-index: 100;
 }
+#swipe-up { display: none; }
 
 #logo {
 	padding-top: 220px;
@@ -48,8 +50,8 @@ html, body {
 	margin-left: -110px;
 	margin-top: -165px;
 	box-shadow: 0 1px 5px 0px rgba(0,0,0,0.8);
-	-webkit-animation: logoBounce 2.5s ease 0s infinite;
-	animation: logoBounce 2.5s ease 0s infinite;
+	/*-webkit-animation: logoBounce 2.5s ease 0s infinite;
+	animation: logoBounce 2.5s ease 0s infinite;*/
 	cursor: pointer;
 }
 
@@ -70,8 +72,7 @@ html, body {
 }
 
 #my-name {
-	font-family: "Titillium-Black", "Titillium";
-	font-weight: bolder;
+	font-weight: 900;
 	font-size: 35pt;
 	color: #4397A0;
 	text-align: center;
@@ -86,8 +87,7 @@ html, body {
 .folio-title {
 	position: absolute;
 	top: 5%;
-	font-family: "Titillium-Black","Titillium";
-	font-weight: bolder;
+	font-weight: 900;
 	font-size: 30pt;
 	color: #FFFFFF;
 	width: 100%;
@@ -107,6 +107,7 @@ html, body {
 	width: 100%;
 	display: inline-block;
 	border: 2px solid #FFF;
+	box-sizing: border-box;
 }
 .screenshot img {
 	width: 100%;
@@ -118,37 +119,38 @@ html, body {
 }
 .work-badges .more {
 	display: none;
-	width: 100px;
+	width: 50%;
 	background: url(more.png) center no-repeat;
 	background-color: rgba(255,255,255,0.3);
 	box-shadow: 0 1px 3px 0px rgba(0,0,0,0.2);
 	border-radius: 3px;
 	height: 50px;
-	float: right;
-	margin-right: 5%;
+	margin: 5% 25%;
 	text-align: center;
 	font-size: 15pt;
 	opacity: 1;
 }
 .badge {
-	width: 48px;
-	height: 48px;
-	background: url(badges.png) center no-repeat;
-	background-color: #FFF0C1;
-	border: 3px solid #FFF;
+	width: 98px;
+	height: 98px;
+	background: url(badges_l.png) center no-repeat;
+	background-color: rgba(255,255,255,0.3);
 	border-radius: 100px;
 	display: inline-block;
 	margin-right: 20px;
 }
-.badge.design { background-position: 0px 0; }
-.badge.dev { background-position: -50px 0; }
-.badge.idea { background-position: -100px 0; }
+.badge.design { background-position: -1px 0; }
+.badge.dev { background-position: -100px 0; }
+.badge.idea { background-position: -200px 0; }
 .comments {
 	width: 90%;
 	margin: 20px 5%;
 	color: #FFF;
 	font-size: 12pt;
 	line-height: 15pt;
+}
+.comments.is-mobile{
+	display: block;
 }
 
 #map {
@@ -238,17 +240,4 @@ html, body {
 }
 #next {
 	right: 0;
-}
-
-
-@media all and (max-width: 800px) {
-	.folio-title { font-size: 20pt; }
-	.content .left { width: 100%; float: left; text-align: center; }
-	.content .right { width: 100%; float: left; margin-top: 20px; }
-	.work-badges .more { display: block; }
-	.work-badges .more:hover { cursor: pointer; opacity: 0.7; }
-	.comments { display: none; position: fixed; top: 10%; left: 0; width: 80%; padding: 20px 10%; margin: 0; background: #333; z-index: 999; font-size: 15pt; line-height: 20pt; }
-	.comments:after { content:"";display: block; background: rgba(0,0,0,0.8); position: fixed; top: 0; left: 0; height: 100%; width: 100%; z-index: -1; }
-	#project-nav .project { margin-left: 25px; width: 15px; height: 15px; }
-	#project-nav .project .project-name { font-size: 10pt; left: -70px; }
 }
